--- a/docs/Base/1.4.ParticipacoesBase.md
+++ b/docs/Base/1.4.ParticipacoesBase.md
@@ -7,16 +7,16 @@
 
 | Nome do Membro | Contribuição | Significância da Contribuição para o Projeto | Comprobatórios  |
 | :------------: | :----------: | :------------------------------------------: | :-------------: |
-| **Lucas Gama De Araujo Bottino** | Participação na [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md) e na produção do [Design Sprint](1.1.DesignSprint.md), [Prototipação](1.5.10.Prototipacao.md), [Lista de Stakeholder](1.5.9.ListaStakeholders.md),   | Excelente  | [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md), [PR #33](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/33), |
-| **Luiza Maluf Amorim** | Participação na [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md) e da produção do [Design Sprint](1.1.DesignSprint.md), Revisão do PR #29, [Priorzação](1.5.7.Priorizacao.md), [Tabela de Requisitos](1.5.6.Tabela-Requisitos.md), [Escopo mínimo](1.5.8.Escopo-minimo.md), [Público-alvo](1.2.5.Publico-Alvo.md) | Excelente | [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md), [PR #29](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/29), [Issue #15](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/issues/15), [Reunião 6](../Projeto/Iniciativas%20Extras/ata_06.md), [PR #28](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/28), [PR #23](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/23) |
-| **Arthur Fonseca Vale** | Participação na [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md), na produção do [Design Sprint](1.1.DesignSprint.md), [Questionário](1.1.6.Questionario.md) | Excelente |[Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md), [PR #34](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/34) |
-| **Carlos Henrique de Souza Bispo** | Participação na [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md) e na produção do [Design Sprint](1.1.DesignSprint.md) | Excelente |  [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md) |
-| **Fillipe Souto de Andrade** | Participação na [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md), na produção do [Design Sprint](1.1.DesignSprint.md), documentação do [Design Sprint](1.1.DesignSprint.md), [Priorzação](1.5.7.Priorizacao.md) | Excelente | [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md), [Issue #18](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/issues/18), [Issue #15](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/issues/15), [Reunião 6](../Projeto/Iniciativas%20Extras/ata_06.md) |
-| **Gabriel Saraiva Canabrava** |Participação na [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md), na produção do [Design Sprint](1.1.DesignSprint.md), [Prototipação](1.5.10.Prototipacao.md) |   Excelente  | [Gravação da Produção do artefato](https://www.youtube.com/watch?v=fR64k5AaB44), [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md), [PR #33](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/33) |
-| **Letícia de Cássia Hladczuk Rodrigues** |  Participação na [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md), na produção do [Design Sprint](1.1.DesignSprint.md), [Prototipação](1.5.10.Prototipacao.md) | Excelente | [Gravação da Produção do artefato](https://www.youtube.com/watch?v=fR64k5AaB44), [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md), [PR #33](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/33) |
-| **Mateus Levy Avelans Boquady**|  Participação na [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md), na produção do [Design Sprint](1.1.DesignSprint.md), [Priorzação](1.5.7.Priorizacao.md) | Excelente  | [Gravação da Produção do artefato](https://www.youtube.com/watch?v=fR64k5AaB44), [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md), [Issue #15](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/issues/15), [Reunião 6](../Projeto/Iniciativas%20Extras/ata_06.md) |
-| **Pablo Serra Carvalho** | Participação na [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md) e na produção do [Design Sprint](1.1.DesignSprint.md) | Excelente |  [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md) |
-| **Rodrigo Fonseca Rodrigues**| Não participou da confecção do [Design Sprint](1.1.DesignSprint.md), Produção da [Priorzação](1.5.7.Priorizacao.md) | Bom |  [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md), [Issue #15](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/issues/15), [Reunião 6](../Projeto/Iniciativas%20Extras/ata_06.md) |
+| **Lucas Gama De Araujo Bottino** | Participação na [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md) e na produção do [Design Sprint](/Base/1.1.DesignSprint.md), [Prototipação](/Base/1.5.10.Prototipacao.md), [Lista de Stakeholder](/Base/1.5.9.ListaStakeholders.md),   | Excelente  | [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md), [PR #33](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/33), |
+| **Luiza Maluf Amorim** | Participação na [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md) e da produção do [Design Sprint](/Base/1.1.DesignSprint.md), Revisão do PR #29, [Priorzação](/Base/1.5.7.Priorizacao.md), [Tabela de Requisitos](/Base/1.5.6.Tabela-Requisitos.md), [Escopo mínimo](/Base/1.5.8.Escopo-minimo.md), [Público-alvo](/Base/1.2.5.Publico-Alvo.md) | Excelente | [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md), [PR #29](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/29), [Issue #15](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/issues/15), [Reunião 6](../Projeto/Iniciativas%20Extras/ata_06.md), [PR #28](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/28), [PR #23](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/23) |
+| **Arthur Fonseca Vale** | Participação na [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md), na produção do [Design Sprint](/Base/1.1.DesignSprint.md), [Questionário](/Base/1.1.6.Questionario.md) | Excelente |[Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md), [PR #34](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/34) |
+| **Carlos Henrique de Souza Bispo** | Participação na [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md) e na produção do [Design Sprint](/Base/1.1.DesignSprint.md) | Excelente |  [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md) |
+| **Fillipe Souto de Andrade** | Participação na [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md), na produção do [Design Sprint](/Base/1.1.DesignSprint.md), documentação do [Design Sprint](1.1.DesignSprint.md), [Priorzação](/Base/1.5.7.Priorizacao.md) | Excelente | [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md), [Issue #18](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/issues/18), [Issue #15](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/issues/15), [Reunião 6](../Projeto/Iniciativas%20Extras/ata_06.md) |
+| **Gabriel Saraiva Canabrava** |Participação na [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md), na produção do [Design Sprint](/Base/1.1.DesignSprint.md), [Prototipação](/Base/1.5.10.Prototipacao.md) |   Excelente  |  [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md), [PR #33](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/33) |
+| **Letícia de Cássia Hladczuk Rodrigues** |  Participação na [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md), na produção do [Design Sprint](/Base/1.1.DesignSprint.md), [Prototipação](/Base/1.5.10.Prototipacao.md) | Excelente | [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md), [PR #33](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/33) |
+| **Mateus Levy Avelans Boquady**|  Participação na [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md), na produção do [Design Sprint](/Base/1.1.DesignSprint.md), [Priorzação](1.5.7.Priorizacao.md) | Excelente  | [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md), [Issue #15](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/issues/15), [Reunião 6](../Projeto/Iniciativas%20Extras/ata_06.md) |
+| **Pablo Serra Carvalho** | Participação na [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md) e na produção do [Design Sprint](/Base/1.1.DesignSprint.md) | Excelente |  [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md) |
+| **Rodrigo Fonseca Rodrigues**| Não participou da confecção do [Design Sprint](/Base/1.1.DesignSprint.md), Produção da [Priorzação](/Base/1.5.7.Priorizacao.md) | Bom |  [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md), [Issue #15](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/issues/15), [Reunião 6](../Projeto/Iniciativas%20Extras/ata_06.md) |
 
 **Autores:** [Luiza](), [Lucas]()
 
@@ -24,16 +24,16 @@
 
 | Nome do Membro | Contribuição | Significância da Contribuição para o Projeto | Comprobatórios |
 | :------------: | :----------: | :------------------------------------------: | :------------: |
-|**Lucas Gama De Araujo Bottino**     | Produção do [RW2H](1.2.3.5W2H.md), Revisão do [Mapa Mental](1.2.1.Mapa-mental.md) | Excelente | [Reunião 3](../Projeto/Iniciativas%20Extras/ata_03.md) |
-| **Luiza Maluf Amorim** | Produção do [Mapa Mental](1.2.1.Mapa-mental.md), Revisão do [RW2H](1.2.3.5W2H.md) | Excelente | [Reunião 2](../Projeto/Iniciativas%20Extras/ata_02.md) |
-|  **Arthur Fonseca Vale** | Produção e Revisão do [RichPicture](./1.2.2.RichPicture.md), [Léxico](1.2.4.Lexicos.md ) | Excelente  | [Reunião 4](../Projeto/Iniciativas%20Extras/ata_04.md), [PR #14](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/issues/14) |
-| **Carlos Henrique de Souza Bispo** |                 Produção do [RW2H](1.2.3.5W2H.md), Produção e Revisão do [Léxico](1.2.4.Lexicos.md )                |                  Excelente                   | [Reunião 3](../Projeto/Iniciativas%20Extras/ata_03.md),  [PR #14](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/issues/14) |
-|       **Fillipe Souto de Andrade**       | Produção do [Mapa Mental](1.2.1.Mapa-mental.md) |  Excelente | [Reunião 2](../Projeto/Iniciativas%20Extras/ata_02.md) |
-|      **Gabriel Saraiva Canabrava**       |  Produção do [RichPicture](./1.2.2.RichPicture.md)  | Excelente |[Reunião 4](../Projeto/Iniciativas%20Extras/ata_04.md) |
-| **Letícia de Cássia Hladczuk Rodrigues** | Produção do [RichPicture](./1.2.2.RichPicture.md) | Excelente | [Reunião 4](../Projeto/Iniciativas%20Extras/ata_04.md) |
-|     **Mateus Levy Avelans Boquady**      | Produção do [Mapa Mental](1.2.1.Mapa-mental.md) |  Excelente |[Reunião 2](../Projeto/Iniciativas%20Extras/ata_02.md), [Mapa Mental](1.2.1.Mapa-mental.md) |
-|         **Pablo Serra Carvalho**         |  Produção do [RW2H](1.2.3.5W2H.md) e [Léxico](1.2.4.Lexicos.md ) | Excelente | [Reunião 3](../Projeto/Iniciativas%20Extras/ata_03.md) |
-|      **Rodrigo Fonseca Rodrigues**       | Produção do [Mapa Mental](1.2.1.Mapa-mental.md) |   Excelente  | [Reunião 2](../Projeto/Iniciativas%20Extras/ata_02.md), [Mapa Mental](1.2.1.Mapa-mental.md) |
+|**Lucas Gama De Araujo Bottino**     | Produção do [5W2H](/Base/1.2.3.5W2H.md), Revisão do [Mapa Mental](/Base/1.2.1.Mapa-mental.md) | Excelente | [Reunião 3](../Projeto/Iniciativas%20Extras/ata_03.md) |
+| **Luiza Maluf Amorim** | Produção do [Mapa Mental](/Base/1.2.1.Mapa-mental.md), Revisão do [5W2H](/Base/1.2.3.5W2H.md) | Excelente | [Reunião 2](../Projeto/Iniciativas%20Extras/ata_02.md) |
+|  **Arthur Fonseca Vale** | Produção e Revisão do [RichPicture](/Base/1.2.2.RichPicture.md), [Léxico](/Base/1.2.4.Lexicos.md) | Excelente  | [Reunião 4](../Projeto/Iniciativas%20Extras/ata_04.md), [PR #14](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/issues/14) |
+| **Carlos Henrique de Souza Bispo** |                 Produção do [Léxico](/Base/1.2.4.Lexicos.md), Produção e Revisão do [Léxico](/Base/1.2.4.Lexicos.md)                |                  Excelente                   | [Reunião 3](../Projeto/Iniciativas%20Extras/ata_03.md),  [PR #14](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/issues/14) |
+|       **Fillipe Souto de Andrade**       | Produção do [Mapa Mental](/Base/1.2.1.Mapa-mental.md) |  Excelente | [Reunião 2](../Projeto/Iniciativas%20Extras/ata_02.md) |
+|      **Gabriel Saraiva Canabrava**       |  Produção do [RichPicture](/Base/1.2.2.RichPicture.md)  | Excelente |[Reunião 4](../Projeto/Iniciativas%20Extras/ata_04.md) |
+| **Letícia de Cássia Hladczuk Rodrigues** | Produção do [RichPicture](/Base/1.2.2.RichPicture.md) | Excelente | [Reunião 4](../Projeto/Iniciativas%20Extras/ata_04.md) |
+|     **Mateus Levy Avelans Boquady**      | Produção do [Mapa Mental](/Base/1.2.1.Mapa-mental.md) |  Excelente |[Reunião 2](../Projeto/Iniciativas%20Extras/ata_02.md), [Mapa Mental](/Base/1.2.1.Mapa-mental.md) |
+|         **Pablo Serra Carvalho**         |  Produção do [Léxico](/Base/1.2.4.Lexicos.md) e [Léxico](/Base/1.2.4.Lexicos.md) | Excelente | [Reunião 3](../Projeto/Iniciativas%20Extras/ata_03.md) |
+|      **Rodrigo Fonseca Rodrigues**       | Produção do [Mapa Mental](/Base/1.2.1.Mapa-mental.md) |   Excelente  | [Reunião 2](../Projeto/Iniciativas%20Extras/ata_02.md), [Mapa Mental](/Base/1.2.1.Mapa-mental.md) |
 
 **Autores:** [Luiza](), [Lucas]()
 
@@ -42,16 +42,16 @@
 
 | Nome do Membro | Contribuição | Significância da Contribuição para o Projeto |  Comprobatórios  |
 | :------------: | :----------: | :------------------------------------------: | :--------------: |
-| **Lucas Gama De Araujo Bottino** | Produção do [BPMN do Design Sprint](./1.3.ModelagemBPMN.md), [Metodologia](./1.3.ModelagemBPMN.md) e Revisão dos [BPMN de Uso do Sistema](./1.3.ModelagemBPMN.md) e [Elicitação de Requisitos](./1.3.ModelagemBPMN.md) | Excelente  | [PR #30](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/30), [Reunião 7](Projeto/Iniciativas%20Extras/ata_07.md) |
-| **Luiza Maluf Amorim** | Produção do [BPMN Elicitação de Requisitos](./1.3.ModelagemBPMN.md), Revisão do [BPMN Design Sprint](./1.3.ModelagemBPMN.md), [Uso do Sistema](./1.3.ModelagemBPMN.md) e [Metodologia](./1.3.ModelagemBPMN.md). | Excelente | [PR #25](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/25), [Reunião 8](../Projeto/Iniciativas%20Extras/ata_08.md) , [PR #24](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/24#pullrequestreview-2759152967), [PR #30](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/30)                                                           |
-| **Arthur Fonseca Vale** | Produção do [BPMN do Design Sprint](./1.3.ModelagemBPMN.md). | Excelente | [PR #30](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/30) , [Reunião 7](Projeto/Iniciativas%20Extras/ata_07.md)
-| **Carlos Henrique de Souza Bispo** | Produção do [BPMN do Uso do Sistema](./1.3.ModelagemBPMN.md). | Bom | [PR #30](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/30) |
-| **Fillipe Souto de Andrade** | Produção do [BPMN Elicitação de Requisitos](./1.3.ModelagemBPMN.md). | Excelente | [PR #25](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/25), [Reunião 8](../Projeto/Iniciativas%20Extras/ata_08.md) |
-| **Gabriel Saraiva Canabrava** | Produção do [BPMN do Uso do Sistema](./1.3.ModelagemBPMN.md). | Bom | [PR #30](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/30) |
-| **Letícia de Cássia Hladczuk Rodrigues** | Produção do [BPMN Elicitação de Requisitos](./1.3.ModelagemBPMN.md) | Excelente | [PR #25](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/25), [Reunião 8](../Projeto/Iniciativas%20Extras/ata_08.md) |
-| **Mateus Levy Avelans Boquady** | Parodução do [BPMN do Uso do Sistema](./1.3.ModelagemBPMN.md) e documentação do [Modelagem BPMN](./1.3.ModelagemBPMN.md) |                  Excelente | [PR #30](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/30) , [Modelagem BPMN](1.3.ModelagemBPMN.md) |
-| **Pablo Serra Carvalho** | Produção do [BPMN do Design Sprint](./1.3.ModelagemBPMN.md). |                  Excelente | [PR #30](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/30) , [Reunião 7](Projeto/Iniciativas%20Extras/ata_07.md) |
-| **Rodrigo Fonseca Rodrigues** | Produção do [BPMN Elicitação de Requisitos](./1.3.ModelagemBPMN.md). |                     Excelente | [PR #25](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/25), [Reunião 8](../Projeto/Iniciativas%20Extras/ata_08.md) |
+| **Lucas Gama De Araujo Bottino** | Produção do [Léxico](/Base/1.2.4.Lexicos.md ), [Metodologia](/Base/1.3.ModelagemBPMN.md) e Revisão dos [BPMN de Uso do Sistema](/Base/1.3.ModelagemBPMN.md) e [Elicitação de Requisitos](/Base/1.3.ModelagemBPMN.md) | Excelente  | [PR #30](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/30), [Reunião 7](Projeto/Iniciativas%20Extras/ata_07.md) |
+| **Luiza Maluf Amorim** | Produção do [BPMN Elicitação de Requisitos](/Base/1.3.ModelagemBPMN.md), Revisão do [BPMN Design Sprint](/Base/1.3.ModelagemBPMN.md), [Uso do Sistema](/Base/1.3.ModelagemBPMN.md) e [Metodologia](/Base/1.3.ModelagemBPMN.md). | Excelente | [PR #25](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/25), [Reunião 8](../Projeto/Iniciativas%20Extras/ata_08.md) , [PR #24](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/24#pullrequestreview-2759152967), [PR #30](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/30)                                                           |
+| **Arthur Fonseca Vale** | Produção do [Léxico](/Base/1.2.4.Lexicos.md ). | Excelente | [PR #30](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/30) , [Reunião 7](Projeto/Iniciativas%20Extras/ata_07.md)
+| **Carlos Henrique de Souza Bispo** | Produção do [BPMN do Uso do Sistema](/Base/1.3.ModelagemBPMN.md). | Bom | [PR #30](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/30) |
+| **Fillipe Souto de Andrade** | Produção do [BPMN Elicitação de Requisitos](/Base/1.3.ModelagemBPMN.md). | Excelente | [PR #25](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/25), [Reunião 8](../Projeto/Iniciativas%20Extras/ata_08.md) |
+| **Gabriel Saraiva Canabrava** | Produção do [BPMN do Uso do Sistema](/Base/1.3.ModelagemBPMN.md). | Bom | [PR #30](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/30) |
+| **Letícia de Cássia Hladczuk Rodrigues** | Produção do [BPMN Elicitação de Requisitos](/Base/1.3.ModelagemBPMN.md) | Excelente | [PR #25](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/25), [Reunião 8](../Projeto/Iniciativas%20Extras/ata_08.md) |
+| **Mateus Levy Avelans Boquady** | Parodução do [BPMN do Uso do Sistema](/Base/1.3.ModelagemBPMN.md) e documentação do [Modelagem BPMN](/Base/1.3.ModelagemBPMN.md) |                  Excelente | [PR #30](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/30) , [Modelagem BPMN](/Base/1.3.ModelagemBPMN.md) |
+| **Pablo Serra Carvalho** | Produção do [Léxico](/Base/1.2.4.Lexicos.md ). |                  Excelente | [PR #30](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/30) , [Reunião 7](Projeto/Iniciativas%20Extras/ata_07.md) |
+| **Rodrigo Fonseca Rodrigues** | Produção do [BPMN Elicitação de Requisitos](/Base/1.3.ModelagemBPMN.md). |                     Excelente | [PR #25](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/25), [Reunião 8](../Projeto/Iniciativas%20Extras/ata_08.md) |
 
 **Autores:** [Luiza](), [Lucas]()
 
@@ -72,3 +72,4 @@
 | Versão | Data | Descrição | Autor | Revisor
 |:-:|:-:|:-:|:-:|:-:|
 |`1.0`| 11/04/2025 | Criação do documento| [Luiza Maluf](https://github.com/LuizaMaluf), [Lucas Bottino](https://github.com/bottinolucas)|   |
+|`1.0`| 11/04/2025 | Correção dos Links| [Luiza Maluf](https://github.com/LuizaMaluf)[Lucas Bottino](https://github.com/bottinolucas)|  [Lucas Bottino](https://github.com/bottinolucas) |
