--- a/docs/Base/1.3.ModelagemBPMN.md
+++ b/docs/Base/1.3.ModelagemBPMN.md
@@ -106,4 +106,4 @@ Figura 4: Metodologia
 | `1.0`  | 09/04/2025 |      Criação ModelagemBPMN       | [Mateus Levy](https://github.com/mateus9levy) | [Lucas Botinno](https://github.com/bottinolucas) |
 | `1.1`  | 09/04/2025 |  adiciona diagrama metodologia   | [Mateus Levy](https://github.com/mateus9levy) | [Lucas Botinno](https://github.com/bottinolucas) |
 | `1.2`  | 09/04/2025 | atualiza diagrama uso do sistema | [Mateus Levy](https://github.com/mateus9levy) | [Lucas Botinno](https://github.com/bottinolucas) |
-| '1.3'  | 11/04/2025 | Adiçao de gravação e padronização do documento | [Luiza](https://github.com/LuizaMaluf) |[Lucas Botinno](https://github.com/bottinolucas)
+| `1.3`  | 11/04/2025 | Adiçao de gravação e padronização do documento | [Luiza](https://github.com/LuizaMaluf) |[Lucas Botinno](https://github.com/bottinolucas)
