--- a/docs/Base/1.3.ModelagemBPMN.md
+++ b/docs/Base/1.3.ModelagemBPMN.md
@@ -51,7 +51,7 @@ Este projeto de desenho de software adotará metodologias ágeis, com foco em Sc
 
 ## Uso do Sistema
 
-![Artefato usodoSistema](../assets/bpmn_uso_do_sistema/bpmn_uso_do_sistema.jpeg)
+![Artefato usodoSistema](../assets/bpmn_uso_do_sistema/bpmn_uso_do_sistema.JPG)
 
 
 
@@ -107,3 +107,4 @@ Figura 4: Metodologia
 | `1.1`  | 09/04/2025 |  adiciona diagrama metodologia   | [Mateus Levy](https://github.com/mateus9levy) | [Lucas Botinno](https://github.com/bottinolucas) |
 | `1.2`  | 09/04/2025 | atualiza diagrama uso do sistema | [Mateus Levy](https://github.com/mateus9levy) | [Lucas Botinno](https://github.com/bottinolucas) |
 | `1.3`  | 11/04/2025 | Adiçao de gravação e padronização do documento | [Luiza](https://github.com/LuizaMaluf) |[Lucas Botinno](https://github.com/bottinolucas)
+| `1.4`  | 11/04/2025 | Atualização do diagrama de uso do sistema | [Gabriel](https://github.com/gabrielsarcan) |
