--- a/docs/Base/1.1.DesignSprint.md
+++ b/docs/Base/1.1.DesignSprint.md
@@ -72,13 +72,13 @@ Selecionar a ideia mais promissora para prototipagem.
 - Documento registrando a ideia escolhida e os critérios de decisão
 
 **Artefatos produzidos:**  
-- [Priorização MoSCoW](1.5.7.Priorizacao.md)  
-- [BPMN](../Base/1.3.ModelagemBPMN.md)
-- [Tabela de Requisitos](1.5.6.Tabela-Requisitos.md)
-- [Escopo mínimo](1.5.8.Escopo-minimo.md)
-- [Lista de Stakeholders](1.5.9.ListaStakeholders.md)
-- [Publico-Alvo](../Base/1.2.5.Publico-Alvo.md).
-- [Matriz CSD](../Base/1.2.5.Publico-Alvo#matriz-csd)
+- [Priorização MoSCoW](/Base/1.5.7.Priorizacao.md)  
+- [BPMN](/Base/1.3.ModelagemBPMN.md)
+- [Tabela de Requisitos](/Base/1.5.6.Tabela-Requisitos.md)
+- [Escopo mínimo](/Base/1.5.8.Escopo-minimo.md)
+- [Lista de Stakeholders](/Base/1.5.9.ListaStakeholders.md)
+- [Publico-Alvo](/Base/1.2.5.Publico-Alvo.md).
+- [Matriz CSD](/Base/1.2.5.Publico-Alvo#matriz-csd)
 
 
 ## __Etapa 4 – Prototype (30 min)__
@@ -97,8 +97,8 @@ Desenvolver um protótipo de alta fidelidade que represente a solução ideal.
 - Protótipo interativo pronto para validação
 
 **Artefatos produzidos:**  
-- [Protótipo de alta fidelidade](1.5.10.Prototipacao.md)
-- [Protótipo de baixa fidelidade](1.5.10.Prototipacao.md)
+- [Protótipo de alta fidelidade](/Base/1.5.10.Prototipacao.md)
+- [Protótipo de baixa fidelidade](/Base/1.5.10.Prototipacao.md)
 
 ## __Etapa 5 – Test (30 min)__
 
@@ -116,24 +116,24 @@ Validar a solução prototipada com usuários reais ou potenciais.
 - Documento com os resultados e principais aprendizados da etapa de testes
 
 **Artefato produzido:**  
-- [Questionário](1.1.6.Questionario.md)
+- [Questionário](/Base/1.1.6.Questionario.md)
 
 
 ## __Rastrabilidade__
 
-- [Mapa Mental](../Base/1.2.1.Mapa-mental.md#mapa-mental) 
-- [5W2H](../Base/1.2.3.5W2H.md)  
-- [RichPicture](../Base/1.2.2.RichPicture.md)
-- [Léxicos](../Base/1.2.4.Lexicos.md)  
-- [Analise de Concorrência](../Base/1.2.5.Publico-Alvo#análise-de-concorrência)
-- [Matriz CSD](../Base/1.2.5.Publico-Alvo.md#matriz-csd)
-- [Lista de Stakeholders](1.5.9.ListaStakeholders.md)
-- [Publico-Alvo](../Base/1.2.5.Publico-Alvo.md)
-- [Matriz CSD](../Base/1.2.5.Publico-Alvo#matriz-csd)
-- [BPMN](../Base/1.3.ModelagemBPMN.md)
-- [Rich_Picture](../Base/1.2.2.RichPicture.md)
-- [Questionario](../Base/1.1.6.Questionario.md)
-- [Prototipação](1.5.10.Prototipacao.md)
+- [Mapa Mental](/Base/1.2.1.Mapa-mental.md#mapa-mental) 
+- [5W2H](/Base/1.2.3.5W2H.md)  
+- [RichPicture](Base/1.2.2.RichPicture.md)
+- [Léxicos](/Base/1.2.4.Lexicos.md)  
+- [Analise de Concorrência](/Base/1.2.5.Publico-Alvo#análise-de-concorrência)
+- [Matriz CSD](/Base/1.2.5.Publico-Alvo.md#matriz-csd)
+- [Lista de Stakeholders](/Base/1.5.9.ListaStakeholders.md)
+- [Publico-Alvo](/Base/1.2.5.Publico-Alvo.md)
+- [Matriz CSD](/Base/1.2.5.Publico-Alvo#matriz-csd)
+- [BPMN](/Base/1.3.ModelagemBPMN.md)
+- [Rich_Picture](/Base/1.2.2.RichPicture.md)
+- [Questionario](/Base/1.1.6.Questionario.md)
+- [Prototipação](/Base/1.5.10.Prototipacao.md)
 
 ## __Histórico de Versão__
 
